<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home__1png"
            android:title="@string/nav_my_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account"
            android:title="@string/nav_my_account" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/dealpng"
            android:title="@string/nav_my_deals" />
        <item
            android:id="@+id/nav_app_tutorial"
            android:icon="@drawable/tutorial"
            android:title="@string/nav_app_tutorial" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share..." />
            <item
                android:id="@+id/nav_rateus"
                android:title="Rate us" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>